Fixed unnecessary scrollbar in chrome

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -6,14 +6,25 @@ html{
     box-sizing: inherit;
   }
 
+.wrapper, .wrapper_full{
+  max-width: 1366px;
+  margin: 0 auto;
+  width: 100%;
+}
+
 .wrapper{
+  padding: 0 98px;
+}
+
+/* .wrapper{
     max-width: 1366px;
     padding: 0 98px;
     margin: 0 auto;
+
     &_full
     {
     width: 100%;
     max-width: 1366px;
     margin: 0 auto;
     }
-  }
+  } */
